--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <p>Hier komt tekst ...</p>
   </section>
   <section id="intro-gegevensdefinitie">
-     <h2>Introductie van de gegevensdefinitie</h2>
-     <section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html" class="generic"></section>
+    <h2>De inhoud van de catalogus</h2>
+     <div id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html" class="generic"></div>
      <section id="type-formaten">
       <h3>Domeinen</h3>
       <!-- hier alleen de domeinuitleg includeren voor domeinen die in het registratieobject gebruikt worden -->
