--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Samenvatting van informatiemodel.</p>
   </section>
   <section id='sotd'>
-    <p>Status van dit document.</p>
+    <p>Deze online catalogus bevat uitsluitend de algemene hoofdstukken die voor elk registratieobject gelden. Deze online catalogus zal in de beheerfase 'up to date' worden gemaakt. De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>.</p>
   </section>
   <section id='inleiding'>
     <h2>Inleiding</h2>
