--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Samenvatting van informatiemodel.</p>
   </section>
   <section id='sotd'>
-    <p>Deze online catalogus bevat uitsluitend de algemene hoofdstukken die voor elk registratieobject gelden. Deze online catalogus zal in de beheerfase 'up to date' worden gemaakt. De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>.</p>
+    <p>Deze online catalogus bevat uitsluitend de algemene hoofdstukken die voor elk registratieobject gelden. Een issue voor de beheerfase is het updaten van deze online catalogus. De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>.</p>
   </section>
   <section id='inleiding'>
     <h2>Inleiding</h2>
@@ -44,7 +44,7 @@
     class='generic'></section>
   <section id='grondwatermonitoringput'>
     <h2>Grondwatermonitoringput</h2>
-    <p>Hier komt tekst ...</p>
+    <p>De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
   </section>
   <section id="intro-gegevensdefinitie">
     <h2>De inhoud van de catalogus</h2>
@@ -65,6 +65,7 @@
     <section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html" class="generic"></section>
     <section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html" class="generic"></section>
 </section>
+    <p>De huidige versie van het domeinmodel is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
 </body>
 
 </html>
