toevoegen Imvertor gegenereerde gegevensdefinitie

--- a/index.html
+++ b/index.html
@@ -62,5 +62,7 @@
 </section>
     <p>De huidige versie van het domeinmodel is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
 </body>
+	<!-- MODEL -->
+  <div data-include="data/GMW-cat.respec.html" data-include-replace=true></div>
 
 </html>
