--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -34,7 +34,7 @@
    <section id="">
       <h2>Entiteittypen en attributen   </h2><a class="anchor" id="graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"></a><a class="anchor" id="global_class_Model_Grondwatermonitoringput"></a><section id="global_class_Model_Grondwatermonitoringput">
          <h3>   Grondwatermonitoringput</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_E2F8B220_F519_4d40_95F0_A8B809943E17.png" usemap="#imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17" alt="Diagram "><map name="imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17"><area shape="rect" alt="Monitoringbuis" coords="519,574,711,642" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Putgeschiedenis" coords="14,348,369,511" href="#graph_EAID_D0D74B8D_E548_436b_AA64_FCAB5991E69A"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,369,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"><area shape="rect" alt="Gestandaardiseerde locatie" coords="888,372,1324,511" href="#graph_EAID_A80BEE92_2158_49ff_B798_714226D8D859"><area shape="rect" alt="Aangeleverde verticale positie" coords="888,175,1324,350" href="#graph_EAID_2C8853A0_8D02_41a9_921E_B037884C7493"><area shape="rect" alt="Aangeleverde locatie" coords="888,14,1324,153" href="#graph_EAID_64C91C32_27E4_441e_94AD_811E8F919127"><area shape="rect" alt="Grondwatermonitoringput" coords="430,14,801,511" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_E2F8B220_F519_4d40_95F0_A8B809943E17.png" usemap="#imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17" alt="Diagram "><map name="imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17"><area shape="rect" alt="Monitoringbuis" coords="536,574,727,642" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Putgeschiedenis" coords="14,348,369,511" href="#graph_EAID_D0D74B8D_E548_436b_AA64_FCAB5991E69A"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,369,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"><area shape="rect" alt="Gestandaardiseerde locatie" coords="888,372,1324,511" href="#graph_EAID_A80BEE92_2158_49ff_B798_714226D8D859"><area shape="rect" alt="Aangeleverde verticale positie" coords="888,175,1324,350" href="#graph_EAID_2C8853A0_8D02_41a9_921E_B037884C7493"><area shape="rect" alt="Aangeleverde locatie" coords="888,14,1324,153" href="#graph_EAID_64C91C32_27E4_441e_94AD_811E8F919127"><area shape="rect" alt="Grondwatermonitoringput" coords="437,14,827,511" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -846,7 +846,7 @@
          </section>
       </section><a class="anchor" id="graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"></a><a class="anchor" id="global_class_Model_Registratiegeschiedenis"></a><section id="global_class_Model_Registratiegeschiedenis">
          <h3>   Registratiegeschiedenis</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48.png" usemap="#imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48" alt="Diagram "><map name="imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,336,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48.png" usemap="#imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48" alt="Diagram "><map name="imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,355,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -1496,7 +1496,7 @@
             </section>
       </section><a class="anchor" id="graph_EAID_D0D74B8D_E548_436b_AA64_FCAB5991E69A"></a><a class="anchor" id="global_class_Model_Putgeschiedenis"></a><section id="global_class_Model_Putgeschiedenis">
          <h3>   Putgeschiedenis</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_F491E7BC_9174_493e_8900_A93E168044E3.png" usemap="#imagemap-EAID_F491E7BC_9174_493e_8900_A93E168044E3" alt="Diagram "><map name="imagemap-EAID_F491E7BC_9174_493e_8900_A93E168044E3"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="410,14,670,135" href="#graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"><area shape="rect" alt="Putgeschiedenis" coords="14,14,355,176" href="#graph_EAID_D0D74B8D_E548_436b_AA64_FCAB5991E69A"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_F491E7BC_9174_493e_8900_A93E168044E3.png" usemap="#imagemap-EAID_F491E7BC_9174_493e_8900_A93E168044E3" alt="Diagram "><map name="imagemap-EAID_F491E7BC_9174_493e_8900_A93E168044E3"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="410,14,670,135" href="#graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"><area shape="rect" alt="Putgeschiedenis" coords="14,14,369,176" href="#graph_EAID_D0D74B8D_E548_436b_AA64_FCAB5991E69A"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -1641,7 +1641,7 @@
          </section>
       </section><a class="anchor" id="graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"></a><a class="anchor" id="global_class_Model_Tussentijdsegebeurtenis"></a><section id="global_class_Model_Tussentijdsegebeurtenis">
          <h3>   Tussentijdse gebeurtenis</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4.png" usemap="#imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4" alt="Diagram "><map name="imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="14,14,254,137" href="#graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4.png" usemap="#imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4" alt="Diagram "><map name="imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="14,14,273,137" href="#graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -3083,6 +3083,8 @@
          </section>
       </section><a class="anchor" id="graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"></a><a class="anchor" id="global_class_Model_Toegepastmateriaal"></a><section id="global_class_Model_Toegepastmateriaal">
          <h3>   Toegepast materiaal</h3>
+         <div class="imageinfo "><img src="data/Images/EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2.png" usemap="#imagemap-EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2" alt="Diagram "><map name="imagemap-EAID_A71456B5_9C82_401c_941E_C9D77CB4EAC2"><area shape="rect" alt="Toegepast materiaal" coords="14,14,302,153" href="#graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"></map><p><b></b></p>
+         </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
             <colgroup style="width: 70%;"></colgroup>
@@ -3241,6 +3243,8 @@
             </section>
       </section><a class="anchor" id="graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"></a><a class="anchor" id="global_class_Model_Filter"></a><section id="global_class_Model_Filter">
          <h3>   Filter</h3>
+         <div class="imageinfo "><img src="data/Images/EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E.png" usemap="#imagemap-EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E" alt="Diagram "><map name="imagemap-EAID_1AFDACA5_B09C_4cd5_AEDD_7D301405094E"><area shape="rect" alt="Filter" coords="14,14,283,171" href="#graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"></map><p><b></b></p>
+         </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
             <colgroup style="width: 70%;"></colgroup>
