--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.65.4</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220510-151933</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220511-141824</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -497,9 +497,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 NITGCode
-                                 </td>
+                              <td>Tekst 8</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -683,7 +681,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57088e3686"></a><section id="detail_d57088e3686">
+                     </section><a class="anchor" id="detail_d57127e3709"></a><section id="detail_d57127e3709">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -713,7 +711,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57088e3808"></a><section id="detail_d57088e3808">
+                  </section><a class="anchor" id="detail_d57127e3831"></a><section id="detail_d57127e3831">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -743,7 +741,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57088e3930"></a><section id="detail_d57088e3930">
+                  </section><a class="anchor" id="detail_d57127e3953"></a><section id="detail_d57127e3953">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -773,7 +771,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57088e4052"></a><section id="detail_d57088e4052">
+                  </section><a class="anchor" id="detail_d57127e4075"></a><section id="detail_d57127e4075">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -803,7 +801,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57088e4174"></a><section id="detail_d57088e4174">
+                  </section><a class="anchor" id="detail_d57127e4197"></a><section id="detail_d57127e4197">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1632,7 +1630,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57088e6893"></a><section id="detail_d57088e6893">
+                     </section><a class="anchor" id="detail_d57127e6916"></a><section id="detail_d57127e6916">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
