--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -473,9 +473,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        NITGCode
-                        </td>
+                     <td>Tekst 8</td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -659,7 +657,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57088e3686"></a><section id="detail_d57088e3686">
+            </section><a class="anchor" id="detail_d57127e3709"></a><section id="detail_d57127e3709">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -689,7 +687,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57088e3808"></a><section id="detail_d57088e3808">
+         </section><a class="anchor" id="detail_d57127e3831"></a><section id="detail_d57127e3831">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -719,7 +717,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57088e3930"></a><section id="detail_d57088e3930">
+         </section><a class="anchor" id="detail_d57127e3953"></a><section id="detail_d57127e3953">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -749,7 +747,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57088e4052"></a><section id="detail_d57088e4052">
+         </section><a class="anchor" id="detail_d57127e4075"></a><section id="detail_d57127e4075">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -779,7 +777,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57088e4174"></a><section id="detail_d57088e4174">
+         </section><a class="anchor" id="detail_d57127e4197"></a><section id="detail_d57127e4197">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1608,7 +1606,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57088e6893"></a><section id="detail_d57088e6893">
+            </section><a class="anchor" id="detail_d57127e6916"></a><section id="detail_d57127e6916">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
