--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -28,13 +28,13 @@
       </section>
    <section id="">
       <h2>Het domeinmodel   </h2>
-      <div class="imageinfo overview"><img src="data/Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Monitoringbuis" coords="533,560,1025,860" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Toegepast materiaal" coords="533,929,806,1080" href="#graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"><area shape="rect" alt="Ingeplaatst deel" coords="1216,724,1544,864" href="#graph_EAID_2844EE68_F05D_489f_B88E_36D5EB750FB8"><area shape="rect" alt="Zandvang" coords="1216,560,1544,664" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"><area shape="rect" alt="Grondwatermonitoringput" coords="560,14,991,492" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"><area shape="rect" alt="Geo-ohmkabel" coords="14,560,355,683" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"><area shape="rect" alt="Filter" coords="656,1122,914,1286" href="#graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"><area shape="rect" alt="Elektrode" coords="14,752,355,920" href="#graph_EAID_6ECD016F_FD12_4466_9B1C_75DBB79A89DC"><area shape="rect" alt="Stijgbuisdeel" coords="779,1326,1025,1428" href="#graph_EAID_3ECF9C95_1E37_4c37_A603_3EE701474DA1"></map><p><b>Grondwatermonitorput (GMW)</b></p>
+      <div class="imageinfo overview"><img src="data/Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Monitoringbuis" coords="534,561,1026,861" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Toegepast materiaal" coords="534,930,807,1081" href="#graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"><area shape="rect" alt="Ingeplaatst deel" coords="1218,725,1546,865" href="#graph_EAID_2844EE68_F05D_489f_B88E_36D5EB750FB8"><area shape="rect" alt="Zandvang" coords="1218,561,1546,665" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"><area shape="rect" alt="Grondwatermonitoringput" coords="561,14,992,492" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"><area shape="rect" alt="Geo-ohmkabel" coords="14,561,356,684" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"><area shape="rect" alt="Filter" coords="657,1123,915,1287" href="#graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"><area shape="rect" alt="Elektrode" coords="14,752,356,921" href="#graph_EAID_6ECD016F_FD12_4466_9B1C_75DBB79A89DC"><area shape="rect" alt="Stijgbuisdeel" coords="780,1327,1026,1430" href="#graph_EAID_3ECF9C95_1E37_4c37_A603_3EE701474DA1"></map><p><b>Grondwatermonitorput (GMW)</b></p>
       </div>
    </section>
    <section id="">
       <h2>Entiteittypen en attributen   </h2><a class="anchor" id="graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"></a><a class="anchor" id="global_class_Model_Grondwatermonitoringput"></a><section id="global_class_Model_Grondwatermonitoringput">
          <h3>   Grondwatermonitoringput</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_E2F8B220_F519_4d40_95F0_A8B809943E17.png" usemap="#imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17" alt="Diagram "><map name="imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17"><area shape="rect" alt="Monitoringbuis" coords="536,574,727,642" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Putgeschiedenis" coords="14,348,369,511" href="#graph_EAID_D0D74B8D_E548_436b_AA64_FCAB5991E69A"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,369,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"><area shape="rect" alt="Gestandaardiseerde locatie" coords="888,372,1324,511" href="#graph_EAID_A80BEE92_2158_49ff_B798_714226D8D859"><area shape="rect" alt="Aangeleverde verticale positie" coords="888,175,1324,350" href="#graph_EAID_2C8853A0_8D02_41a9_921E_B037884C7493"><area shape="rect" alt="Aangeleverde locatie" coords="888,14,1324,153" href="#graph_EAID_64C91C32_27E4_441e_94AD_811E8F919127"><area shape="rect" alt="Grondwatermonitoringput" coords="437,14,827,511" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_E2F8B220_F519_4d40_95F0_A8B809943E17.png" usemap="#imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17" alt="Diagram "><map name="imagemap-EAID_E2F8B220_F519_4d40_95F0_A8B809943E17"><area shape="rect" alt="Monitoringbuis" coords="536,575,728,643" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Putgeschiedenis" coords="14,349,369,512" href="#graph_EAID_D0D74B8D_E548_436b_AA64_FCAB5991E69A"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,369,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"><area shape="rect" alt="Gestandaardiseerde locatie" coords="889,372,1326,512" href="#graph_EAID_A80BEE92_2158_49ff_B798_714226D8D859"><area shape="rect" alt="Aangeleverde verticale positie" coords="889,175,1326,350" href="#graph_EAID_2C8853A0_8D02_41a9_921E_B037884C7493"><area shape="rect" alt="Aangeleverde locatie" coords="889,14,1326,153" href="#graph_EAID_64C91C32_27E4_441e_94AD_811E8F919127"><area shape="rect" alt="Grondwatermonitoringput" coords="438,14,828,512" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -473,7 +473,9 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>Tekst 8</td>
+                     <td>
+                        NITGCode
+                        </td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -657,7 +659,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57127e3709"></a><section id="detail_d57127e3709">
+            </section><a class="anchor" id="detail_d57150e3686"></a><section id="detail_d57150e3686">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -687,7 +689,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57127e3831"></a><section id="detail_d57127e3831">
+         </section><a class="anchor" id="detail_d57150e3808"></a><section id="detail_d57150e3808">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -717,7 +719,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57127e3953"></a><section id="detail_d57127e3953">
+         </section><a class="anchor" id="detail_d57150e3930"></a><section id="detail_d57150e3930">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -747,7 +749,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57127e4075"></a><section id="detail_d57127e4075">
+         </section><a class="anchor" id="detail_d57150e4052"></a><section id="detail_d57150e4052">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -777,7 +779,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57127e4197"></a><section id="detail_d57127e4197">
+         </section><a class="anchor" id="detail_d57150e4174"></a><section id="detail_d57150e4174">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -844,7 +846,7 @@
          </section>
       </section><a class="anchor" id="graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"></a><a class="anchor" id="global_class_Model_Registratiegeschiedenis"></a><section id="global_class_Model_Registratiegeschiedenis">
          <h3>   Registratiegeschiedenis</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48.png" usemap="#imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48" alt="Diagram "><map name="imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,355,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48.png" usemap="#imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48" alt="Diagram "><map name="imagemap-EAID_FC71399E_8846_4ed1_9D5B_2D0A9D380D48"><area shape="rect" alt="Registratiegeschiedenis" coords="14,14,356,313" href="#graph_EAID_27831BC3_65A8_4d6f_87C4_022C311F27D8"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -1606,7 +1608,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57127e6916"></a><section id="detail_d57127e6916">
+            </section><a class="anchor" id="detail_d57150e6893"></a><section id="detail_d57150e6893">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1639,7 +1641,7 @@
          </section>
       </section><a class="anchor" id="graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"></a><a class="anchor" id="global_class_Model_Tussentijdsegebeurtenis"></a><section id="global_class_Model_Tussentijdsegebeurtenis">
          <h3>   Tussentijdse gebeurtenis</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4.png" usemap="#imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4" alt="Diagram "><map name="imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="14,14,273,137" href="#graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4.png" usemap="#imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4" alt="Diagram "><map name="imagemap-EAID_60AF8F07_30C6_44d0_A701_587673D7ECA4"><area shape="rect" alt="Tussentijdse gebeurtenis" coords="14,14,274,137" href="#graph_EAID_28BAFABA_1E68_42b9_8C59_EB6A6C38C9A9"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -2302,7 +2304,7 @@
             </section>
       </section><a class="anchor" id="graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"></a><a class="anchor" id="global_class_Model_Monitoringbuis"></a><section id="global_class_Model_Monitoringbuis">
          <h3>   Monitoringbuis</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F.png" usemap="#imagemap-EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F" alt="Diagram "><map name="imagemap-EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F"><area shape="rect" alt="Monitoringbuis" coords="14,14,519,313" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Toegepast materiaal" coords="14,383,205,451" href="#graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"><area shape="rect" alt="Ingeplaatst deel" coords="668,243,860,312" href="#graph_EAID_2844EE68_F05D_489f_B88E_36D5EB750FB8"><area shape="rect" alt="Zandvang" coords="668,128,860,197" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"><area shape="rect" alt="Geo-ohmkabel" coords="668,14,860,82" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"><area shape="rect" alt="Filter" coords="178,485,342,553" href="#graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"><area shape="rect" alt="Stijgbuisdeel" coords="328,588,506,656" href="#graph_EAID_3ECF9C95_1E37_4c37_A603_3EE701474DA1"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F.png" usemap="#imagemap-EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F" alt="Diagram "><map name="imagemap-EAID_1FF69766_5DE4_40b0_956F_EACAEB5A5E9F"><area shape="rect" alt="Monitoringbuis" coords="14,14,520,313" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Toegepast materiaal" coords="14,383,205,451" href="#graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"><area shape="rect" alt="Ingeplaatst deel" coords="669,244,861,312" href="#graph_EAID_2844EE68_F05D_489f_B88E_36D5EB750FB8"><area shape="rect" alt="Zandvang" coords="669,129,861,197" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"><area shape="rect" alt="Geo-ohmkabel" coords="669,14,861,82" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"><area shape="rect" alt="Filter" coords="178,486,342,554" href="#graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"><area shape="rect" alt="Stijgbuisdeel" coords="328,588,506,657" href="#graph_EAID_3ECF9C95_1E37_4c37_A603_3EE701474DA1"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -2864,9 +2866,9 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_IndicatieJaNeeOnbekend">
-                           IndicatieJaNeeOnbekend
-                           </a></td>
+                     <td>
+                        IndicatieJaNeeOnbekend
+                        </td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -3495,7 +3497,7 @@
             </section>
       </section><a class="anchor" id="graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"></a><a class="anchor" id="global_class_Model_Zandvang"></a><section id="global_class_Model_Zandvang">
          <h3>   Zandvang</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272.png" usemap="#imagemap-EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272" alt="Diagram "><map name="imagemap-EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272"><area shape="rect" alt="Zandvang" coords="14,14,236,137" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272.png" usemap="#imagemap-EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272" alt="Diagram "><map name="imagemap-EAID_FDDC67AA_E8F3_47ee_B05B_5590E4D23272"><area shape="rect" alt="Zandvang" coords="14,14,237,137" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -3558,7 +3560,7 @@
             </section>
       </section><a class="anchor" id="graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"></a><a class="anchor" id="global_class_Model_Geoohmkabel"></a><section id="global_class_Model_Geoohmkabel">
          <h3>   Geo-ohmkabel</h3>
-         <div class="imageinfo "><img src="data/Images/EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063.png" usemap="#imagemap-EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063" alt="Diagram "><map name="imagemap-EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063"><area shape="rect" alt="Elektrode" coords="437,14,656,82" href="#graph_EAID_6ECD016F_FD12_4466_9B1C_75DBB79A89DC"><area shape="rect" alt="Geo-ohmkabel" coords="14,14,323,137" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"></map><p><b></b></p>
+         <div class="imageinfo "><img src="data/Images/EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063.png" usemap="#imagemap-EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063" alt="Diagram "><map name="imagemap-EAID_8CD22EE2_BA7A_4c71_8595_154513C0B063"><area shape="rect" alt="Elektrode" coords="438,14,657,82" href="#graph_EAID_6ECD016F_FD12_4466_9B1C_75DBB79A89DC"><area shape="rect" alt="Geo-ohmkabel" coords="14,14,323,137" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"></map><p><b></b></p>
          </div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
@@ -3653,9 +3655,9 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_IndicatieJaNeeOnbekend">
-                           IndicatieJaNeeOnbekend
-                           </a></td>
+                     <td>
+                        IndicatieJaNeeOnbekend
+                        </td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -6137,8 +6139,8 @@
          </tbody>
       </table>
       </section>
-   <section id="detail_class_Model_IndicatieJaNeeOnbekend">
-      <h2>Enumeratie details  IndicatieJaNeeOnbekend</h2>
+   <section id="detail_class_Model_IndicatieJaNeeOnbekendobsolete">
+      <h2>Enumeratie details  IndicatieJaNeeOnbekend-obsolete</h2>
       
       <table style="width: 100%;" class="list">
          <colgroup></colgroup>
