--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -717,6 +717,14 @@
                         </td>
                   </tr>
                   <tr>
+                     <th>Regels IMBRO/A</th>
+                     <td>
+                        
+                        <p>Onder IMBRO/A kan het voorkomen dat de waarde van het gegeven niet bekend is; ook
+                           in dat geval heeft het gegeven geen waarde.</p>
+                        </td>
+                  </tr>
+                  <tr>
                      <th>Materiële geschiedenis</th>
                      <td>Ja</td>
                   </tr>
@@ -846,7 +854,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d58701e4200"></a><section id="detail_d58701e4200">
+            </section><a class="anchor" id="detail_d58711e4214"></a><section id="detail_d58711e4214">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -884,7 +892,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d58701e4366"></a><section id="detail_d58701e4366">
+         </section><a class="anchor" id="detail_d58711e4380"></a><section id="detail_d58711e4380">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -921,7 +929,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d58701e4532"></a><section id="detail_d58701e4532">
+         </section><a class="anchor" id="detail_d58711e4546"></a><section id="detail_d58711e4546">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -959,7 +967,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d58701e4698"></a><section id="detail_d58701e4698">
+         </section><a class="anchor" id="detail_d58711e4712"></a><section id="detail_d58711e4712">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -996,7 +1004,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d58701e4864"></a><section id="detail_d58701e4864">
+         </section><a class="anchor" id="detail_d58711e4878"></a><section id="detail_d58711e4878">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1866,7 +1874,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d58701e7775"></a><section id="detail_d58701e7775">
+            </section><a class="anchor" id="detail_d58711e7789"></a><section id="detail_d58711e7789">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
