--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.65.4</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220516-125315</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220516-125551</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -741,6 +741,14 @@
                                  </td>
                            </tr>
                            <tr>
+                              <th>Regels IMBRO/A</th>
+                              <td>
+                                 
+                                 <p>Onder IMBRO/A kan het voorkomen dat de waarde van het gegeven niet bekend is; ook
+                                    in dat geval heeft het gegeven geen waarde.</p>
+                                 </td>
+                           </tr>
+                           <tr>
                               <th>Materiële geschiedenis</th>
                               <td>Ja</td>
                            </tr>
@@ -870,7 +878,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d58701e4200"></a><section id="detail_d58701e4200">
+                     </section><a class="anchor" id="detail_d58711e4214"></a><section id="detail_d58711e4214">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -908,7 +916,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d58701e4366"></a><section id="detail_d58701e4366">
+                  </section><a class="anchor" id="detail_d58711e4380"></a><section id="detail_d58711e4380">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -945,7 +953,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d58701e4532"></a><section id="detail_d58701e4532">
+                  </section><a class="anchor" id="detail_d58711e4546"></a><section id="detail_d58711e4546">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -983,7 +991,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d58701e4698"></a><section id="detail_d58701e4698">
+                  </section><a class="anchor" id="detail_d58711e4712"></a><section id="detail_d58711e4712">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1020,7 +1028,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d58701e4864"></a><section id="detail_d58701e4864">
+                  </section><a class="anchor" id="detail_d58711e4878"></a><section id="detail_d58711e4878">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1890,7 +1898,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d58701e7775"></a><section id="detail_d58701e7775">
+                     </section><a class="anchor" id="detail_d58711e7789"></a><section id="detail_d58711e7789">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
