--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.65.4</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220517-090757</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220517-094442</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -113,7 +113,7 @@
                               <th>Definitie</th>
                               <td>
                                  
-                                 <p>De identificatie van een booronderzoek in de registratie ondergrond.</p>
+                                 <p>De identificatie van een grondwatermonitoringput in de registratie ondergrond.</p>
                                  </td>
                            </tr>
                            <tr>
