--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -89,7 +89,7 @@
                      <th>Definitie</th>
                      <td>
                         
-                        <p>De identificatie van een booronderzoek in de registratie ondergrond.</p>
+                        <p>De identificatie van een grondwatermonitoringput in de registratie ondergrond.</p>
                         </td>
                   </tr>
                   <tr>
