--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -40,7 +40,7 @@
       </section>
    <section id="">
       <h2>Het domeinmodel   </h2>
-      <div class="imageinfo overview"><img src="data/Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Monitoringbuis" coords="546,641,1037,940" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Toegepast materiaal" coords="546,1010,819,1160" href="#graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"><area shape="rect" alt="Ingeplaatst deel" coords="1228,805,1556,944" href="#graph_EAID_2844EE68_F05D_489f_B88E_36D5EB750FB8"><area shape="rect" alt="Zandvang" coords="1228,641,1556,745" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"><area shape="rect" alt="Grondwatermonitoringput" coords="573,14,1003,577" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"><area shape="rect" alt="Geo-ohmkabel" coords="27,641,368,764" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"><area shape="rect" alt="Filter" coords="669,1202,927,1366" href="#graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"><area shape="rect" alt="Elektrode" coords="27,832,368,1000" href="#graph_EAID_6ECD016F_FD12_4466_9B1C_75DBB79A89DC"><area shape="rect" alt="Stijgbuisdeel" coords="791,1406,1037,1508" href="#graph_EAID_3ECF9C95_1E37_4c37_A603_3EE701474DA1"></map><p><b>Grondwatermonitorput (GMW)</b></p>
+      <div class="imageinfo overview"><img src="data/Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Monitoringbuis" coords="532,641,1023,940" href="#graph_EAID_37A4505C_6C20_449b_A69D_5A3FD406F71F"><area shape="rect" alt="Toegepast materiaal" coords="532,1010,805,1160" href="#graph_EAID_991ABB1E_6DE8_44be_9F69_873394B4A09F"><area shape="rect" alt="Ingeplaatst deel" coords="1215,805,1542,944" href="#graph_EAID_2844EE68_F05D_489f_B88E_36D5EB750FB8"><area shape="rect" alt="Zandvang" coords="1215,641,1542,745" href="#graph_EAID_CE9B3282_A2CA_4584_B481_3AAD2ED94AA0"><area shape="rect" alt="Grondwatermonitoringput" coords="560,14,989,577" href="#graph_EAID_E20E6BE9_A59A_4c79_B908_1A41DD2640E0"><area shape="rect" alt="Geo-ohmkabel" coords="14,641,355,764" href="#graph_EAID_054D0A9D_812D_4cbd_8B7A_B33B81D5C6F5"><area shape="rect" alt="Filter" coords="655,1202,913,1366" href="#graph_EAID_84B999FC_3DE9_4f72_A0A7_99DDD6DB7CB7"><area shape="rect" alt="Elektrode" coords="14,832,355,1000" href="#graph_EAID_6ECD016F_FD12_4466_9B1C_75DBB79A89DC"><area shape="rect" alt="Stijgbuisdeel" coords="778,1406,1023,1508" href="#graph_EAID_3ECF9C95_1E37_4c37_A603_3EE701474DA1"></map><p><b>Grondwatermonitorput (GMW)</b></p>
       </div>
    </section>
    <section id="">
@@ -860,7 +860,7 @@
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
                      <td>
-                        NITGCode
+                        NITGCode-obsolete
                         </td>
                   </tr>
                   <tr>
@@ -925,7 +925,7 @@
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
                      <td>
-                        Putcode
+                        Putcode-obsolete
                         </td>
                   </tr>
                   <tr>
