--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@
       <h3>Domeinen</h3>
       <!-- hier alleen de domeinuitleg includeren voor domeinen die in het registratieobject gebruikt worden -->
       <p>Een domein beschrijft welke waarden een attribuut mag hebben. Domeinen zijn van een bepaald type en de typen die in de catalogus worden gebruikt worden hieronder toegelicht. Sommige domeinen zijn samengesteld en die worden als laatste besproken.</p>
+      <section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html" class="generic"></section>
       <section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html" class="generic"></section>
       <section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html" class="generic"></section>
       <section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html" class="generic"></section>
-      <section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html" class="generic"></section>
+      <section id="gemeten waarden">
+		<h4>Gemeten waarden</h4>
+		<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
+	      	<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
+		<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div> 
+      </section>
       <section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html" class="generic"></section>
       <section id="enumeratie" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html" class="generic"></section>
       <section id="codelijst" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html" class="generic"></section>
