--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.65.4</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220523-091225</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220523-130315</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -884,7 +884,7 @@
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
                               <td>
-                                 NITGCode-obsolete
+                                 NITGCode
                                  </td>
                            </tr>
                            <tr>
@@ -949,7 +949,7 @@
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
                               <td>
-                                 Putcode-obsolete
+                                 Putcode
                                  </td>
                            </tr>
                            <tr>
