--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -860,7 +860,7 @@
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
                      <td>
-                        NITGCode-obsolete
+                        NITGCode
                         </td>
                   </tr>
                   <tr>
@@ -925,7 +925,7 @@
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
                      <td>
-                        Putcode-obsolete
+                        Putcode
                         </td>
                   </tr>
                   <tr>
