--- a/index.html
+++ b/index.html
@@ -41,37 +41,39 @@
     <h2>Grondwatermonitoringput</h2>
     <p>De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
   </section>
-  <section id="intro-gegevensdefinitie">
-    <h2>De inhoud van de catalogus</h2>
-     <div id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html" class="generic"></div>
-     <section id="type-formaten">
-      <h3>Domeinen</h3>
-      <!-- hier alleen de domeinuitleg includeren voor domeinen die in het registratieobject gebruikt worden -->
-      <p>Een domein beschrijft welke waarden een attribuut mag hebben. Domeinen zijn van een bepaald type en de typen die in de catalogus worden gebruikt worden hieronder toegelicht. Sommige domeinen zijn samengesteld en die worden als laatste besproken.</p>
-      <section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html" class="generic"></section>
-      <section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html" class="generic"></section>
-      <section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html" class="generic"></section>
-      <section id="gemeten waarden">
-		<h4>Gemeten waarden</h4>
-		<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
-	      	<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
-		<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div> 
-      </section>
-      <section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
-      <section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html" class="generic"></section>
-      <section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html" class="generic"></section>
-      <section id="waardelijsten">
-		<h4>Waardelijsten</h4>
-		<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div> 
-		<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
-		<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
-      </section>
-      <section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
-      <section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html" class="generic"></section>    
-    </section>
-    <section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html" class="generic"></section>
-    <section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html" class="generic"></section>
-</section>
+
+	<!-- introductie gegevensdefinitie generiek -->
+	<!-- hoofdstuk 5 -->
+	<section id="intro-gegevensdefinitie" class='generic informative'>
+		<h2>Opbouw van de gegevensdefinitie</h2>
+		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
+		<section id="domeinen">
+			<h3>Domeinen</h3>	
+			<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html" class="generic"></section>
+			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html" class="generic"></section>
+			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html" class="generic"></section>
+			<section id="gemeten waarden">
+				<h4>Gemeten waarden</h4>
+				<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
+				<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
+				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div> 
+			</section>
+			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
+			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html" class="generic"></section>
+			<section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html" class="generic"></section>
+			<section id="waardelijsten">
+				<h4>Waardelijsten</h4>
+				<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div> 
+				<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
+				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
+			</section>
+			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
+			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html" class="generic"></section>    
+		</section>
+		<section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html" class="generic"></section>
+		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html" class="generic"></section>
+	</section>
+	
     <p>De huidige versie van het domeinmodel is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
 </body>
 	<!-- MODEL -->
