--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div> 
 			</section>
 			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
-			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"</section>
+			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>
 			<section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
 			<section id="waardelijsten">
 				<h4>Waardelijsten</h4>
