--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<h2>Opbouw van de gegevensdefinitie</h2>
 		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
 		<section id="domeinen">
-			<h3>Domeinen</h3>	
+			<h3>Domeinen</h3>
 			<div id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
 			<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
 			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
@@ -61,7 +61,7 @@
 			</section>
 			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
 			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>
-			<section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
+			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
 			<section id="waardelijsten">
 				<h4>Waardelijsten</h4>
 				<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div> 
@@ -69,7 +69,7 @@
 				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
 			</section>
 			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
-			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>    			
+			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
 		</section>
 		<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
 		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
