--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.66.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220602-113433</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220602-125321</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1011,9 +1011,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 KvK-nummer
-                                 </td>
+                              <td>Organisatie</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -1079,9 +1077,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 KvK-nummer
-                                 </td>
+                              <td>Organisatie</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -1162,7 +1158,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59502e4159"></a><section id="detail_d59502e4159">
+                     </section><a class="anchor" id="detail_d59450e4159"></a><section id="detail_d59450e4159">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1200,7 +1196,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59502e4325"></a><section id="detail_d59502e4325">
+                  </section><a class="anchor" id="detail_d59450e4325"></a><section id="detail_d59450e4325">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1237,7 +1233,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59502e4491"></a><section id="detail_d59502e4491">
+                  </section><a class="anchor" id="detail_d59450e4491"></a><section id="detail_d59450e4491">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1275,7 +1271,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59502e4657"></a><section id="detail_d59502e4657">
+                  </section><a class="anchor" id="detail_d59450e4657"></a><section id="detail_d59450e4657">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1312,7 +1308,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59502e4823"></a><section id="detail_d59502e4823">
+                  </section><a class="anchor" id="detail_d59450e4823"></a><section id="detail_d59450e4823">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2185,7 +2181,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59502e7773"></a><section id="detail_d59502e7773">
+                     </section><a class="anchor" id="detail_d59450e7773"></a><section id="detail_d59450e7773">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
