--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -987,9 +987,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        KvK-nummer
-                        </td>
+                     <td>Organisatie</td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -1055,9 +1053,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        KvK-nummer
-                        </td>
+                     <td>Organisatie</td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -1138,7 +1134,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59502e4159"></a><section id="detail_d59502e4159">
+            </section><a class="anchor" id="detail_d59450e4159"></a><section id="detail_d59450e4159">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1176,7 +1172,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59502e4325"></a><section id="detail_d59502e4325">
+         </section><a class="anchor" id="detail_d59450e4325"></a><section id="detail_d59450e4325">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1213,7 +1209,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59502e4491"></a><section id="detail_d59502e4491">
+         </section><a class="anchor" id="detail_d59450e4491"></a><section id="detail_d59450e4491">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1251,7 +1247,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59502e4657"></a><section id="detail_d59502e4657">
+         </section><a class="anchor" id="detail_d59450e4657"></a><section id="detail_d59450e4657">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1288,7 +1284,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59502e4823"></a><section id="detail_d59502e4823">
+         </section><a class="anchor" id="detail_d59450e4823"></a><section id="detail_d59450e4823">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2161,7 +2157,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59502e7773"></a><section id="detail_d59502e7773">
+            </section><a class="anchor" id="detail_d59450e7773"></a><section id="detail_d59450e7773">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
